--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
 
+v0.0.3
+  - 2014/10/14: add railsc gem source (bibendi)
+
 v0.0.2
+  - 2014/10/14: Release 0.0.2 (bibendi)
   - 2014/10/14: fix check git (bibendi)
   - 2014/10/14: first (bibendi)
