--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
+  - 2014/10/14: downgrade changelogger to 0.0.2 (bibendi)
 
 v0.0.3
+  - 2014/10/14: Release 0.0.3 (bibendi)
   - 2014/10/14: add railsc gem source (bibendi)
 
 v0.0.2
